Fix icons for dark mode

--- a/src/output.css
+++ b/src/output.css
@@ -861,6 +861,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
 .bg-contain {
   background-size: contain;
 }
@@ -871,6 +876,30 @@ video {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.fill-green-400 {
+  fill: #4ade80;
+}
+
+.fill-black {
+  fill: #000;
+}
+
+.fill-red-600 {
+  fill: #dc2626;
+}
+
+.fill-gray-800 {
+  fill: #1f2937;
+}
+
+.stroke-green-50 {
+  stroke: #f0fdf4;
+}
+
+.stroke-green-500 {
+  stroke: #22c55e;
 }
 
 .p-0 {
@@ -990,6 +1019,15 @@ video {
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
+.accent-black {
+  accent-color: #000;
 }
 
 .opacity-60 {
@@ -1117,8 +1155,17 @@ video {
   background-color: rgb(74 222 128 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:bg-white:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
 .dark\:fill-gray-200:is(.dark *) {
   fill: #e5e7eb;
+}
+
+.dark\:fill-white:is(.dark *) {
+  fill: #fff;
 }
 
 .dark\:font-bold:is(.dark *) {
